[package]
name = "fitness_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = {version = "4.4.7", features = ["derive"] }
datetime = "0.5.2"
dotenv = "0.15.0"
plotters = "0.3.5"
tokio = { version = "1.0", features = ["full"]}
sqlx = { version = "0.6", features = [ "mysql", "runtime-tokio-native-tls", "chrono" ] }
futures = "0.3"
xml = "1.2.0"
